# BotLi

./: .gitignore  .pylintrc  .ruff.toml  Dockerfile  Procfile  README.md  aliases.py  api.py  api_challenge_response.py  botli_dataclasses.py  challenge_color.py  challenge_handler.py  challenge_request.py  challenge_response.py  challenge_validator.py  challenger.py  chatter.py  config.py  config.yml  config.yml.default  configs.py  console.py  decline_reason.py  engine.py  enums.py  event_handler.py  exceptions.py  game.py  game_api.py  game_counter.py  game_manager.py  heroku.yml  heroku_challenges.py  heroku_matchmaking.py  lichess_bot.py  lichess_game.py  logo.py  matchmaking.py  matchmaking_response.py  opponent.py  (+11 more)
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Docker.yml  autopep8.yml  autopep8format.yml  bot.yml  codeanalysis.yml  docker.yml  lintinag.yml  linting.yml  main.yml  pylint.yml  pyright.yml  release.yml  ruff.yml  update-repo.yml
